# SimpleProject

./: .gitignore  .gitmodules  CMakeLists.txt
SmpPrj/: CMakeLists.txt
SmpPrj/src/: SimpleProject.cpp
src/: SimpleProject.cpp
